Sugati/src/objects/Staff_Visit_Photo_Requs__c.object
<CustomObject>
    <description>Farm/Staff/Educational Trip Visit with reports and Photot_Requirements</description>
    <fields>
        <fullName>SV_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SV_Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SV_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staff_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Visit &amp; Photo Reqs</label>
    <nameField>
        <displayFormat>FV-{0000000000}</displayFormat>
        <label>Farm Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Visits &amp; Photo Reqs</pluralLabel>
    <recordTypes>
        <fullName>Photo_Requs</fullName>
        <active>true</active>
        <label>Photo Requs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Visit</fullName>
        <active>true</active>
        <label>Staff Visit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>